<resources>
    <string name="app_name">Civil Advocacy </string>
    <string name="copy_right">© 2023, Sadanand Kolhe</string>
    <string name="google_civic_information_api"><u>Google Civic Information API</u></string>
    <string name="textview">TextView</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="data_provided_by">Data provided by</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
</resources>